--- a/index.html
+++ b/index.html
@@ -35,9 +35,101 @@
               <a class="main-link" href="#index-cta">Qabulga yozilish</a>
             </div>
           </header>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, officia? Cupiditate pariatur velit, dolores dolor reiciendis molestias dignissimos ducimus debitis fugit, incidunt ipsum esse ad quod delectus laborum ullam expedita? Fugit accusamus error quibusdam ex consectetur ipsam recusandae quam reprehenderit officia doloremque natus blanditiis voluptatibus labore molestias explicabo quos debitis doloribus temporibus delectus dolores atque, amet a. Ratione blanditiis illo tenetur quas cumque itaque quisquam ipsam hic quod impedit ipsa, distinctio quam voluptatibus, dolorum, libero autem perspiciatis nobis accusantium. Impedit accusamus maiores doloribus eos atque reprehenderit voluptas omnis, recusandae explicabo quisquam vero delectus enim voluptates, ullam ipsam tempore corporis consequatur soluta qui? Quis modi voluptates distinctio iusto iure odio corrupti, porro, culpa illum voluptas natus nulla odit deserunt quae dolorum sequi ipsum reprehenderit aut inventore facere adipisci maiores totam saepe esse. Cupiditate ex odit, quos quas vero nobis minima corrupti pariatur cumque quis quam commodi harum, accusantium consequatur saepe, animi expedita dolorum! Quibusdam corrupti dolore illo dolorem quidem, accusantium quia dolor, totam ut id praesentium! Recusandae, excepturi! Quam sunt numquam quis ex atque voluptatibus, nam consequuntur odit enim sit, vel culpa natus cumque neque voluptatem explicabo ullam quidem consequatur sapiente ipsa saepe perspiciatis. Illum sequi ut porro alias suscipit voluptate cum, reiciendis beatae? Magnam dignissimos asperiores libero assumenda. Laboriosam rerum soluta pariatur possimus corporis itaque earum, tempore non, illo ut, consequuntur eius minus eligendi! Dicta dolorum eum laboriosam dolor nemo eaque exercitationem dolore dolores in, quos a error quis officia sunt consectetur. Vitae quia iure esse? Dolore officiis minus iusto! Exercitationem accusamus ex maiores quos delectus saepe qui voluptatem eum incidunt? Nobis omnis rerum libero, vel quod suscipit dolor accusantium tenetur voluptate. Minima, similique fugiat dolorum, hic molestias nihil quasi amet voluptate deserunt corporis aliquid corrupti minus explicabo excepturi modi ipsa soluta! Nostrum blanditiis laudantium harum laborum porro temporibus earum.
-          </p>
+
+  <!-- MAIN-CONTENT -->
+  <main>
+    <section class="hero">
+      <div class="hero-container container">
+        <div class="hero-content">
+          <h2 class="hero-heading">Tabiiy davolash usullari yordamida kasalliklardan xalos bo’ling.</h2>
+          <p class="hero-text">Hijoma, manual terapiya, zuluk va turli tabiiy giyohlar eng ko’p uchraydigan kasalliklarni yengishda yordam beradi. Sog’ligingizni o’z ishining professionallariga ishonib topshiring.</p>
+          <a class="main-link main-link-solid" href="#index-cta">Qabulga yozilish</a>
+        </div>
+
+        <img class="hero-img" src="img/hero-img.png" alt="Ulug'bek Azamatov, tabib, hajjom" width="423" height="504" srcset="img/hero-img.png 1x, img/hero-img@2x.png 2x">
+      </div>
+    </section>
+
+
+    <!-- INDEX-SERVICES -->
+    <section class="index-services">
+      <div class="container">
+        <h2 class="index-services-heading">Xizmatlar</h2>
+
+        <ul class="index-services-list">
+          <li class="index-services-item index-service">
+            <img class="index-service-img" src="img/service-hijoma.jpg" alt="" width="200" height="200" srcset="img/service-hijoma.jpg 1x, img/service-hijoma@2x.jpg 2x">
+            <div class="index-service-content">
+              <h3 class="index-service-title">Hijoma</h3>
+              <p class="index-service-description">Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).</p>
+            </div>
+          </li>
+
+          <li class="index-services-item index-service">
+            <img class="index-service-img" src="img/service-manual-terapiya.jpg" alt="" width="200" height="200" srcset="img/service-manual-terapiya.jpg 1x, img/service-manual-terapiya@2x.jpg 2x">
+            <div class="index-service-content">
+              <h3 class="index-service-title">Manual terapiya</h3>
+              <p class="index-service-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.</p>
+            </div>
+          </li>
+
+          <li class="index-services-item index-service">
+            <img class="index-service-img" src="img/service-zuluk.jpg" alt="" width="200" height="200" srcset="img/service-zuluk.jpg 1x, img/service-zuluk@2x.jpg 2x">
+            <div class="index-service-content">
+              <h3 class="index-service-title">Zuluk bilan davolash</h3>
+              <p class="index-service-description">Girudoterapiya (lot. hirūdō — «zuluk» va qad. yun. θεραπεία — «davolash») — ma’lum kasalliklarni dorivor zuluklar (Hirudo medicinalis) yordamida davolash usuli. Fizioterapevtik muolaja, muqobil tibbiyotga oid sanaladi. Bunday zuluklar ushbu kichik sinf chuvchalchanglariga oid yagona tur hisoblanadi, qolganlari shifobaxsh ta’sir ko’rsatmaydi.</p>
+            </div>
+          </li>
+
+          <li class="index-services-item index-service">
+            <img class="index-service-img" src="img/service-dorilar.jpg" alt="" width="200" height="200" srcset="img/service-dorilar.jpg 1x, img/service-dorilar@2x.jpg 2x">
+            <div class="index-service-content">
+              <h3 class="index-service-title">Tabiiy dori vositalari</h3>
+              <p class="index-service-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.</p>
+            </div>
+          </li>
+        </ul>
+
+        <div class="index-services-actions">
+          <a class="main-link" href="#index-cta">Qabulga yozilish</a>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- CTA -->
+    <section class="cta" id="index-cta">
+      <div class="container">
+        <h2 class="cta-heading">Qabulga ro’yxatdan o’ting</h2>
+        <div class="cta-links">
+          <a class="cta-links-item main-link main-link-outline" href="tel:+998901333344">Qo’ng’iroq qilish</a>
+          <a class="cta-links-item main-link main-link-outline" href="https://t.me/ansor_admin" target="_blank">Telegramdan yozish</a>
+        </div>
+      </div>
+    </section>
+  </main>
+
+
+  <!-- SITE-FOOTER -->
+  <footer class="site-footer">
+    <div class="site-footer-container container">
+      <a class="site-logo site-logo-site-footer" href="#">
+        <img class="site-logo-img" src="img/logo-icon.jpg" alt="AnsorMed logo icon" width="50" height="50" srcset="img/logo-icon.jpg 1x, img/logo-icon@2x.jpg 2x">
+        <span class="site-logo-text">AnsorMed</span>
+      </a>
+
+      <!-- SITENAV -->
+      <nav class="sitenav sitenav-site-footer">
+        <ul class="sitenav-list">
+          <li class="sitenav-item"><a class="sitenav-link" href="#">Xizmatlar</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#">Dorilar</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#">Asal</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#">Kontaktlar</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#">Blog</a></li>
+        </ul>
+      </nav>
+    </div>
+  </footer>
     </div>
 </body>
 </html>
